Fix footer waves not showing

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -39,26 +39,3 @@
 .custom-shape-divider-bottom-1707017585 .shape-fill {
 	fill: #f5f3ff;
 }
-
-/* Waves Footer */
-.custom-shape-divider-bottom-1707101128 {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	overflow: hidden;
-	line-height: 0;
-	transform: rotate(180deg);
-}
-
-.custom-shape-divider-bottom-1707101128 svg {
-	position: relative;
-	display: block;
-	width: calc(180% + 1.3px);
-	height: 150px;
-	transform: rotateY(180deg);
-}
-
-.custom-shape-divider-bottom-1707101128 .shape-fill {
-	fill: #0f172a;
-}
